--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -15,7 +15,7 @@ As there is a lot of terms used in this thesis related to the kind of job Infome
 \end{itemize}
 
 \section{Matching}
-In this thesis we will talk about false and true positives and negatives. A match will mean that two articles to some extend have the same content (or at least believed to have the same content).
+In this thesis we will talk about false and true positives and negatives. A 'match' will mean that two articles to some extend have the same content (or at least believed to have the same content).
 
 \begin{itemize}
 \item \textbf{False Positive:} When an algorithm wrongfully identifies two articles as a match.
@@ -26,10 +26,10 @@ In this thesis we will talk about false and true positives and negatives. A matc
 
 
 \section{Duplicates}
-In this thesis the term 'duplicates' or 'match' about article comparisons is often used. A duplication (match) can be an article that has been taken directly from a news feed and posted in a newspaper. Many local newspapers is owned by larger newspapers, and they will often receive articles from their owning paper. They will then print this in their own paper. Sometimes they will only use parts of the article and this will also be considered a duplicate for this thesis. As such duplication in this thesis is a way of describing how similar two articles are, rather than saying different papers are doing conscious fraud. That is a matter for another thesis. 
+In this thesis the terms 'duplicates' or 'match' are often used about article comparisons. A duplication (match) can be an article that has been taken directly from a news feed and posted in a newspaper. Many local newspapers is owned by larger newspapers, and they will often receive articles from their owning paper. They will then print this in their own paper. Sometimes they will only use parts of the article and this will also be considered a duplicate for this thesis. As such, duplication in this thesis is a way of describing how similar two articles are, rather than saying different papers are doing conscious fraud. That is a matter for another thesis. 
 
 \subsection{Topic Matching}
-When looking at article matching, there is also the possibility of having articles score pretty well by the algorithms because they are dealing with the same topic, but have not been duplicated. There are cases where the article have been heavily modified, and then there would be no basis to talk about duplication, then one could talk about topic matching. The obfuscation could be done by purpose as to try and hide the fact that the article is a duplicate of another article. The article no longer contains the same phrases, but deals with the same topic.
+When looking at article matching, there is also the possibility of having articles score pretty well in the algorithms because they are dealing with the same topic, but have not been duplicated. There are cases where the article have been heavily modified, and then there would be no basis to talk about duplication. Then one could talk about topic matching. The obfuscation could be done by purpose, to try and hide the fact that the article is a duplicate of another article. The article no longer contains the same phrases, but deals with the same topic.
 Of course two articles could describe the same topic, but never have been related to begin with. I will not try and dissect whether this is the case, only try and indicate when I find two articles that are dealing with the same topic, and mark them as such. 
 
 \subsection{Copyright}
@@ -46,5 +46,5 @@ Confused? That's okay. Copyrights are pretty complex things. A lot of what can b
 
 So the whole concept is extremely fuzzy, and often the infringement part will have to be settled in court. In the recent years there have been a lot of debate in which university educated people have become accused of plagiarism  in relation to their doctoral or master thesis\footnote{\url{http://www.theguardian.com/world/2011/feb/16/german-defence-minister-plagiarism-accusation}}$^{,}$\footnote{\url{http://www.nytimes.com/2012/04/03/world/europe/hungarian-president-pal-schmitt-resigns-amid-plagiarism-scandal.html?_r=0}}. A hard topic to deal with in a fixed way, and to top it off, there is also the notion of \textit{"fair use"}\footnote{\url{http://www.umuc.edu/library/libhow/copyright.cfm\#fairuse_definition}}. Although there is no real fair use paragraph in Danish law, we instead have \textit{'låneregler'}\footnote{\url{http://da.wikipedia.org/wiki/Fair_use}}. 
 
-In the world that Infomedia is dealing with, articles are also a target of duplication, and a lot of effort have begun being invested into this, as it can be a question about a lot of money if you fail to protect your copyrighted material. So the motivation in finding article duplicates can be two sided. First off, it creates a better overview for Infomedia's customers, secondly newspapers are very interested in finding out if their material is being used, unlicensed, in other media.
+In the world that Infomedia is dealing with, articles are also a target of duplication, and a lot of effort have begun being invested into this, as it can be a question about a lot of money if you fail to protect your copyrighted material. So the motivation in finding article duplicates can be two sided. First off, it creates a better overview for Infomedia's customers, secondly copyright owners are very interested in finding out if their material is being used, unlicensed, in other media.
 
